--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -73,6 +74,9 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>2.0.8</version>
 			</plugin>
 		</plugins>
 	</build>
