--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,11 @@
 						</exclude>
 					</excludes>
 				</configuration>
-				<groupId>com.heroku.sdk</groupId>
-				<artifactId>heroku-maven-plugin</artifactId>
-				<version>2.0.8</version>
+				<plugin>
+					<groupId>com.heroku.sdk</groupId>
+					<artifactId>heroku-maven-plugin</artifactId>
+					<version>3.0.3</version>
+				</plugin>
 			</plugin>
 		</plugins>
 	</build>
