--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
 					<artifactId>heroku-maven-plugin</artifactId>
 					<version>3.0.3</version>
 				</plugin>
+				<plugin>
+					<groupId>one.digitalinnovation.maven</groupId>
+					<artifactId>git-commit-id-plugin</artifactId>
+					<configuration>
+						<failOnNoGitDirectory>false</failOnNoGitDirectory>
+					</configuration>
+				</plugin>
 			</plugin>
 		</plugins>
 	</build>
