--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,10 @@
 					<groupId>com.heroku.sdk</groupId>
 					<artifactId>heroku-maven-plugin</artifactId>
 					<version>3.0.3</version>
+					<failOnNoGitDirectory>false</failOnNoGitDirectory>
 				</plugin>
 				<plugin>
-					<groupId>one.digitalinnovation.maven</groupId>
+					<groupId>p1.project13.maven</groupId>
 					<artifactId>git-commit-id-plugin</artifactId>
 					<configuration>
 						<failOnNoGitDirectory>false</failOnNoGitDirectory>
