Developed get person by ID and Trows exception 404

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 <name>personapi</name>
 <description>Person API project for Spring Boot</description>
 <properties>
-	<java.version>11</java.version>
+	<java.version>1.8</java.version>
 	<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 </properties>
 <dependencies>
@@ -91,9 +91,10 @@
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.8.1</version>
 			<configuration>
-				<source>${java.version}</source>
-				<target>${java.version}</target>
+				<source>11</source>
+				<target>11</target>
 				<annotationProcessorPaths>
 					<path>
 						<groupId>org.projectlombok</groupId>
