--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 <name>personapi</name>
 <description>Person API project for Spring Boot</description>
 <properties>
-	<java.version>1.8</java.version>
+	<java.version>11.0.11</java.version>
 	<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 </properties>
 <dependencies>
@@ -93,8 +93,8 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.8.1</version>
 			<configuration>
-				<source>11</source>
-				<target>11</target>
+				<source>1.8</source>
+				<target>1.8</target>
 				<annotationProcessorPaths>
 					<path>
 						<groupId>org.projectlombok</groupId>
@@ -105,6 +105,11 @@
 						<groupId>org.mapstruct</groupId>
 						<artifactId>mapstruct-processor</artifactId>
 						<version>1.4.2.Final</version>
+					</path>
+					<path>
+						<groupId>com.heroku.sdk</groupId>
+						<artifactId>heroku-maven-plugin</artifactId>
+						<version>2.0.8</version>
 					</path>
 				</annotationProcessorPaths>
 			</configuration>
